# TUI-framework-in-cpp

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  ROADMAP.md  TODO.md  modernTUIarchitecture.md  plan.md  starting.md  tui
.agents/: AGENTS.md
include/: ColumnContainer.hpp  GridContainer.hpp  RowContainer.hpp  backend.hpp  box.hpp  cell.hpp  colour.hpp  colourPair.hpp  container.hpp  event.hpp  eventHandler.hpp  flexContainer.hpp  frameBuffer.hpp  insets.hpp  layout.hpp  layoutEngine.hpp  linux_backend.hpp  multiChildWidget.hpp  named_colour.hpp  node.hpp  react_dsl.hpp  rect.hpp  singleChildWidget.hpp  splitParagraphs.hpp  stackContainer.hpp  style.hpp  terminal.hpp  text.hpp  tools.hpp  unicode.hpp  widget.hpp  widgetTree.hpp
src/: boxTypes.cppm  boxTypes.hpp  main.cpp  terminal.cpp  terminal.cppm  terminal.hpp  tools.cpp  tools.cppm  tools.hpp  types.hpp  unicode.cpp  unicode.cppm  unicode.hpp
